[package]
author = "Oyelowo Oyedayo"
edition = "2021"
name = "common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.37", features = [
  "redis-session",
  "session",
  "websocket",
  "prometheus",
  "multipart",
  "cookie",
  "compression",
  "sse",
  "i18n",
  "test",
  "anyhow",
  # "eyre",
  "tokio-metrics",
  "opentelemetry",
  "opentelemetry-http",
] }
sqlx = { version = "0.6.1", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "chrono",
  "offline",
  "json",
  "macros",
  "uuid",
  "migrate",
] }
async-trait = "0.1.57"
anyhow = "1.0.60"
async-graphql = "4.0.6"
argon2 = { version = "0.4.1", features = ["std"] }
chrono = { version = "0.4.20", features = ["serde"] }
chrono-tz = "0.6.3"
envy = "0.4.2"
futures = "0.3.21"
hmac = { version = "0.12.1", features = ["std"] }
log = "0.4.17"
rand = "0.8.5"
secrecy = "0.8.0"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
serde-aux = "3.1.0"
sha2 = "0.10.2"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
# Observability
tracing = "0.1.36"

redis = { version = "0.21.5", features = [
  "tokio-comp",
  "tokio-native-tls-comp",
] }

bson = "2.4.0"
mongodb = { version = "2.3.0", features = ["bson-chrono-0_4"] }


# For Oauth
url = "2.2.2"
typed-builder = "0.10.0"
reqwest = { version = "0.11.11", default-features = false, features = [
  "rustls-tls",
] }
oauth2 = "4.2.3"
derive_more = "0.99.17"
my-macros = { path = "../my-macros" }
validator = { version = "0.16.0", features = ["derive"] }
multimap = "0.8.3"


[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
surf = "2.3.2"
reqwest = "0.11.3"
tokio = { version = "1.5.0", features = ["macros"] }
actix-rt = "2.2.0"
cargo-watch = "8.1.2"
isahc = "1.3.1"
env_logger = "0.9.0"
tokio-test = "0.4.2"
# tokio = "0.2"
pretty_assertions = "1.2.1"
httpmock = "0.6.6"
wiremock = "0.5.14"
