[package]
author = "Oyelowo Oyedayo"
edition = "2021"
name = "common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = { version = "1.3.45", features = [
  "redis-session",
  "session",
  "websocket",
  "prometheus",
  "multipart",
  "cookie",
  "compression",
  "sse",
  "i18n",
  "test",
  "anyhow",
  # "eyre",
  "tokio-metrics",
  "opentelemetry",
  "opentelemetry-http",
] }
surrealdb = "1.0.0-beta.8"
sqlx = { version = "0.6.2", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "chrono",
  "offline",
  "json",
  "macros",
  "uuid",
  "migrate",
] }

async-trait = "0.1.57"
anyhow = "1.0.65"
async-graphql = "4.0.15"
argon2 = { version = "0.4.1", features = ["std"] }
chrono = { version = "0.4.22", features = ["serde"] }
chrono-tz = "0.6.3"
envy = "0.4.2"
futures = "0.3.24"
hmac = { version = "0.12.1", features = ["std"] }
log = "0.4.17"
rand = "0.8.5"
secrecy = "0.8.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde-aux = "3.1.0"
sha2 = "0.10.6"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
uuid = { version = "1.2.1", features = ["v4", "serde"] }
# Observability
tracing = "0.1.37"

redis = { version = "0.21.6", features = [
  "tokio-comp",
  "tokio-native-tls-comp",
] }

bson = "2.4.0"
mongodb = { version = "2.3.1", features = ["bson-chrono-0_4"] }


# For Oauth
url = "2.3.1"
typed-builder = "0.10.0"
reqwest = { version = "0.11.12", default-features = false, features = [
  "rustls-tls",
] }
oauth2 = "4.2.3"
derive_more = "0.99.17"
my-macros = { path = "../my-macros" }
validator = { version = "0.16.0", features = ["derive"] }
multimap = "0.8.3"
lru = "0.7.8"

[dev-dependencies]
surf = "2.3.2"
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["macros"] }
cargo-watch = "8.1.2"
isahc = "1.7.2"
env_logger = "0.9.1"
tokio-test = "0.4.2"
pretty_assertions = "1.3.0"
wiremock = "0.5.14"
