[package]
edition = "2021"
name = "graphql-mongo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}

# actix-rt = {version = "2.6.0", default-features = false, optional = true}
actix-web = {version = "4.0.1", default-features = false, features = ["macros"]}
actix-cors = "0.6.0"
async-graphql = {version = "3.0.34", features = [
  "apollo_tracing",
  "apollo_persisted_queries",
  "bson",
  "dataloader",
  "chrono",
  "chrono-tz",
  "log",
  "dataloader",
  "tracing",
  "opentelemetry",
  "unblock",
  "url",
  "uuid",
  "string_number",
  "secrecy",
  "decimal",
  "smol_str",
]}
async-graphql-actix-web = "3.0.34"
tokio = {version = "1.16.1", features = ["full"]}
futures = "0.3"

mongodb = {version = "2.1.0", features = ["bson-chrono-0_4"]}
bson = "2.1.0"
# chrono = "0.4.19"
chrono = {version = "0.4.19", features = ["serde"]}
chrono-tz = "0.6.1"
# mongodb = "2.1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
slab = "0.4.5"
typed-builder = "0.9.1"
url = "2.2.2"
uuid = "0.8.2"
validator = {version = "0.12", features = ["derive"]}
wither = {git = "https://github.com/thedodd/wither", branch = "master"}
# wither = "0.9.0"

# Observability
tracing = "0.1.31"
tracing-subscriber = "0.3.9"

urlencoding = "2.1.0"
anyhow = "1.0.49"
envy = "0.4.2"
secrecy = "0.8.0"
thiserror = "1.0.30"
log = "0.4.14"
argon2 = { version = "0.3.4", features = ["std"] }
rand = "0.8.5"

async-trait = "0.1.52"
config = "0.11.0"
crossbeam = "0.8.1"
derive_more = "0.99.17"
parking_lot = "0.11.2"
rayon = "1.5.1"
ron = "0.7.0"
serde-aux = "3.0.1"
# ts-rs = "6.1"
ts-rs = {version = "6.1", features = ["uuid-impl", "chrono-impl", "serde-compat"]}