[package]
edition = "2021"
name = "graphql-mongo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
my-macros = { path = "../my-macros" }
mongo-helpers = { path = "../mongo-helpers" }
poem = { version = "1.3.32", features = [
  "redis-session",
  "session",
  "websocket",
  "prometheus",
  "multipart",
  "cookie",
  "compression",
  "sse",
  "i18n",
  "test",
  "anyhow",
  # "eyre",
  "tokio-metrics",
  "opentelemetry",
  "opentelemetry-http",
] }
poem-openapi = { version = "2.0", features = ["swagger-ui"] }

async-graphql = { version = "4.0.4", features = [
  "apollo_tracing",
  "apollo_persisted_queries",
  "bson",
  "dataloader",
  "chrono",
  "chrono-tz",
  "log",
  "dataloader",
  "tracing",
  "opentelemetry",
  "unblock",
  "url",
  "uuid",
  "string_number",
  "secrecy",
  "decimal",
  "smol_str",
] }

async-graphql-poem = "4.0.4"
futures = "0.3.21"
futures-util = "0.3.21"
tokio = { version = "1.18.2", features = ["full"] }
redis = { version = "0.21.5", features = [
  "tokio-comp",
  "tokio-native-tls-comp",
] }
oauth2 = "4.2.0"
reqwest = { version = "0.11.4", default-features = false, features = [
  "rustls-tls",
] }

bson = "2.2.0"
mongodb = { version = "2.2.1", features = ["bson-chrono-0_4"] }
# chrono = "0.4.19"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.6.1"
# mongodb = "2.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
slab = "0.4.6"
typed-builder = "0.10.0"
url = "2.2.2"
uuid = "1.1.0"
validator = { version = "0.16.0", features = ["derive"] }
wither = { git = "https://github.com/Oyelowo/wither", branch = "master" }
# Keep an eye on wither official repo
# wither = { git = "https://github.com/thedodd/wither", branch = "master" }
# wither = "0.9.0"
mongodm = "0.9.0"
# Observability
tracing = "0.1.34"
tracing-subscriber = "0.3.11"


anyhow = "1.0.57"
argon2 = { version = "0.4.0", features = ["std"] }
convert_case = "0.5.0"
env_logger = "0.9.0"
envy = "0.4.2"
# hmac = "0.12.1"
# sha2 = "0.10.2"
log = "0.4.17"
rand = "0.8.5"
secrecy = "0.8.0"
thiserror = "1.0.31"
urlencoding = "2.1.0"
lazy_static = "1.4.0"

async-trait = "0.1.53"
config = "0.13.1"
crossbeam = "0.8.1"
derive_more = "0.99.17"
parking_lot = "0.12.0"
rayon = "1.5.3"
ron = "0.7.0"
serde-aux = "3.0.1"
# ts-rs = "6.1"
ts-rs = { version = "6.1.2", features = [
  "uuid-impl",
  "chrono-impl",
  "serde-compat",
] }

backoff = { version = "0.4.0", features = ["futures", "tokio"] }

[dev-dependencies]
strum = "0.24.0"
strum_macros = "0.24"
# You can also use the "derive" feature, and import the macros directly from "strum"
# strum = { version = "0.24", features = ["derive"] }
