[package]
edition = "2021"
name = "graphql-postgres"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
poem = { version = "1.3.30", features = [
  "redis-session",
  "session",
  "websocket",
  "prometheus",
  "multipart",
  "cookie",
  "compression",
  "sse",
  "i18n",
  # "eyre",
  "tokio-metrics",
] }
async-graphql = { version = "4.0.1", features = [
  "apollo_tracing",
  "apollo_persisted_queries",
  "bson",
  "dataloader",
  "chrono",
  "chrono-tz",
  "log",
  "dataloader",
  "tracing",
  "opentelemetry",
  "unblock",
  "url",
  "uuid",
  "uuid08",
  "string_number",
  "secrecy",
  "decimal",
  "smol_str",
] }
tokio = { version = "1.18.2", features = ["full"] }

bson = "2.2.0"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.6.1"
rand = "0.8.5"
sea-orm = { version = "0.8.0", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
ormx = { version = "0.10.0", features = ["postgres"] }
sqlx = { version = "0.5.13", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "chrono",
  "offline",
  "json",
  "macros",
  "uuid",
  "migrate",
] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }

anyhow = "1.0.57"
dotenv = "0.15.0"
envy = "0.4.2"
futures = "0.3.21"
log = "0.4.17"
secrecy = "0.8.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
simple_logger = "2.1.0"
slab = "0.4.6"
thiserror = "1.0.31"
typed-builder = "0.10.0"
url = "2.2.2"
urlencoding = "2.1.0"
validator = { version = "0.15.0", features = ["derive"] }

async-trait = "0.1.53"
config = "0.13.1"
crossbeam = "0.8.1"
derive_more = "0.99.17"
parking_lot = "0.12.0"
rayon = "1.5.3"
ron = "0.7.0"
serde-aux = "3.0.1"
