[package]
name = "grpc-mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tonic = "0.7.2"
# tonic-web = "0.2"
prost = "0.10.4"
# tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.57"
thiserror = "1.0.31"
# sqlx = "0.5.11"
sqlx-cli = "0.5.13"
sqlx = { version = "0.5.13", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1.18.2", features = ["full"] }

mongodb = { version = "2.2.1", features = ["bson-chrono-0_4"] }
bson = "2.2.0"
# chrono = "0.4.19"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.6.1"
# mongodb = "2.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
slab = "0.4.6"
typed-builder = "0.10.0"
url = "2.2.2"
uuid = "1.1.0"
validator = { version = "0.15.0", features = ["derive"] }
wither = {git = "https://github.com/thedodd/wither", branch = "master"}

async-trait = "0.1.53"
config = "0.13.1"
crossbeam = "0.8.1"
derive_more = "0.99.17"
parking_lot = "0.12.0"
rayon = "1.5.3"
ron = "0.7.0"
serde-aux = "3.0.1"
urlencoding = "2.1.0"
envy = "0.4.2"
secrecy = "0.8.0"
futures = "0.3.21"

# async-stream = "0.3"
# prost = "0.9"
# tokio = {version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
# tokio-stream = {version = "0.1", features = ["net"]}
# tower = {version = "0.4"}
# # Required for routeguide
# rand = "0.8"
# serde = {version = "1.0", features = ["derive"]}
# serde_json = "1.0"
# # Tracing
# tracing = "0.1.16"
# tracing-attributes = "0.1"
# tracing-futures = "0.2"
# tracing-subscriber = {version = "0.2", features = ["tracing-log"]}
# # Required for wellknown types
# prost-types = "0.9"
# # Hyper example
# http = "0.2"
# http-body = "0.4.2"
# hyper = {version = "0.14", features = ["full"]}
# pin-project = "1.0"
# warp = "0.3"
# # Health example
# # Reflection example
# listenfd = "0.3"
# # grpc-web example
# bytes = "1"



[build-dependencies]
tonic-build = "0.7.2"
anyhow = "1.0.57"
thiserror = "1.0.31"
