[package]
name = "grpc-surrealdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
common = { path = "../common" }
my-macros = { path = "../my-macros" }
surrealdb = "1.0.0-beta.8"
tonic = "0.8.2"
# tonic = { version = "0.8.0", default-features = false, features = [
#     "transport",
#     "tls",
# ] }
log = "0.4.17"
tonic-web = "0.4"
prost = "0.11.0"
base64 = "0.13"
bytes = "1.2"
futures-core = "0.3"
http = "0.2"
http-body = "0.4"
hyper = "0.14"
pin-project = "1"
tower-service = "0.3"
tracing = "0.1"


tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.65"
thiserror = "1.0.37"
bson = "2.4.0"
chrono = { version = "0.4.22", features = ["serde"] }
chrono-tz = "0.6.3"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
slab = "0.4.7"
typed-builder = "0.10.0"
url = "2.3.1"
uuid = "1.2.1"
validator = { version = "0.16.0", features = ["derive"] }

async-trait = "0.1.57"
config = "0.13.2"
crossbeam = "0.8.2"
derive_more = "0.99.17"
parking_lot = "0.12.1"
rayon = "1.5.3"
ron = "0.7.1"
serde-aux = "3.1.0"
urlencoding = "2.1.2"
envy = "0.4.2"
secrecy = "0.8.0"
futures = "0.3.24"

# async-stream = "0.3"
# prost = "0.9"
# tokio = {version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
# tokio-stream = {version = "0.1", features = ["net"]}
# tower = {version = "0.4"}
# # Required for routeguide
# rand = "0.8"
# serde = {version = "1.0", features = ["derive"]}
# serde_json = "1.0"
# # Tracing
# tracing = "0.1.16"
# tracing-attributes = "0.1"
# tracing-futures = "0.2"
# tracing-subscriber = {version = "0.2", features = ["tracing-log"]}
# # Required for wellknown types
# prost-types = "0.9"
# # Hyper example
# http = "0.2"
# http-body = "0.4.2"
# hyper = {version = "0.14", features = ["full"]}
# pin-project = "1.0"
# warp = "0.3"
# # Health example
# # Reflection example
# listenfd = "0.3"
# # grpc-web example
# bytes = "1"


[dev-dependencies]


[build-dependencies]
tonic-build = "0.8.2"
anyhow = "1.0.65"
thiserror = "1.0.37"
cmake = "0.1.49"