[package]
name = "mongo-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.2.1", features = ["bson-chrono-0_4"] }
serde = { version = "1.0.137", features = ["derive"] }
anyhow = "1.0.57"
serde_json = "1.0.81"