[package]
name = "mongo-helpers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.2.1", features = ["bson-chrono-0_4"] }
serde = { version = "1.0.137", features = ["derive"] }
anyhow = "1.0.57"

# wither = { git = "https://github.com/Oyelowo/wither", branch = "master" }
# Keep an eye on wither. Only the master branch is stable at the momenet
# Also, only use minimal part of the functionalities
# wither = { git = "https://github.com/thedodd/wither", branch = "master" }