[package]
edition = "2021"
name = "my-macros"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hello-macro-derive = {path = "../hello-macro-derive"}
# macro-derive = {path = "./derive"}
derive = {path = "./derive"}
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0.46"
# syn = { version = "1.0.85", features = ["full", "extra-traits", "visit-mut", "visit"] }
# quote = "1.0.10"
# Inflector = "0.11.4"
# proc-macro-crate = "1.1.0"
darling = "0.14.1"
convert_case = "0.5.0"
serde = { version = "1.0.145", features = ["derive"] }
# thiserror = "1.0.24"
# proc-macro2-diagnostics = "0.9"

# [lib]
# proc-macro = true
# crate_type = ["proc-macro"]
